--- a/ICLReader.html
+++ b/ICLReader.html
@@ -12,14 +12,13 @@
       //Learning Jupiter NoteBook
       //////////----------Instantiate Variables----------//////////
       var loading = true;
+      var fxs = [GoOutAtAngle, Wait, FollowWall, WaitFor, FollowWallFor, GoToCenter, WaitAverage];
 
       var time = 0;
-      var timeMax = 10000;
+      var timeMax = 10000;//in milliseconds
       var timeBox;
       var timeSlide;
 
-      var fxs = [this.GoOutAtAngle, this.FollowWall, this.FollowWallFor, this.GoToCenter,
-                 this.Wait, this.WaitFor, this.AverageWait];
       var projector;
       var fieldSVG;
       var unit2Px = 0;
@@ -31,42 +30,21 @@
       var fieldExit = 0;
       var wireless = true;
       var instruBinder = [
-                          [[0, [30]], [1, ["left"]]],
-                          [[0, [330]], [1, ["right"]]],
-                          [[0, [30]], [2, ["right", 60]], [3, [null]], [5, [1]], [6, [null]]],
+                          [[0, [45]], [2, ['left']]],
+                          [[0, [-125]], [1, [null]]],
+                          [[0, [170]], [3, [1]], [2, ['right']]],
+                          [[0, [87]], [4, ['left', 60]], [1, [null]]],
+                          [[0, [30]], [4, ['right', 60]], [5, [null]], [1, [null]]],
+                          [[6, [null]]]
                          ];
 
-      //////////---------- Instantiate Classes ----------//////////
-      class Tourist {
-        constructor (visual, instructions, center) {
-          this.number = touristNum;
-          touristNum++;
-          this.visual = visual;
-          this.instru = instructions;
-          this.a = 0;
-          this.x = center[0];
-          this.y = center[1];
-          this.t = 0;
-          this.on = 0;
-          this.velocity = unit2Px;
-          this.stamps = [[null, center[0], center[1]]];
-          this.ikwei = false;
-        }
-        Update() {
-          if (!this.ikwei) {
-            fxs[this.instru[this.on][0]](this, this.instru[this.on][1]);
-            FoundExit(this);
-          }
-        }
-      }
-
       //////////--------Instantiate Call Functions--------//////////
+      //The box's dragging ability
       function SSlide() {
         d3.select(this).style("fill", "orange");
         d3.select(this).classed("active", true);
       }
-
-      function MSlide(d) {
+      function MSlide() {
         var mousePos = d3.event.x;
         if (mousePos < 0) {
           mousePos = 0;
@@ -74,124 +52,163 @@
           mousePos = (31 / 8) * unit2Px;
         }
         d3.select(this).attr("x", mousePos);
+        time = (mousePos / ((31 / 8) * unit2Px)) * timeMax;
+        tourists.forEach((tourist) => {
+          tourist.Update();
+        });
       }
-
       function ESlide() {
         d3.select(this).style("fill", "#888888");
         d3.select(this).classed("active", false);
       }
+
+      //////////---------- Instantiate Classes ----------//////////
+      //A basic class, only holds data, and calls updates.
+      class Tourist {
+        constructor (visual, instructions) {
+          this.number = touristNum;
+          touristNum++;
+          this.visual = visual;
+          this.instru = instructions;
+          this.stamps = [];
+          this.on = 0;
+          this.a = 0;
+          this.x = center[0];
+          this.y = center[1];
+        }
+        //A loading update for genrating the data before hand
+        LoadUpdate() {
+          fxs[this.instru[this.on][0]](this, this.instru[this.on][1]);
+        }
+        //A standard update, initialized from the load update
+        Update() {
+          for (i = 0; i < this.stamps.length; i++) {
+            if (this.stamps[i][0] <= time) {
+              this.on = i;
+            } else {
+              break;
+            }
+          }
+          fxs[this.stamps[this.on][1]](this, this.stamps[this.on][2]);
+        }
+      }
+
       //////////----------Instantiate Functions----------//////////
 
-//0	Start/Mid function; Requires robot at center and an angle, robot goes from some angle for one radius.
+//	Start/Middle; Requires at center and angle; Bot goes to wall
       function GoOutAtAngle(who, value) {
-        var distance = Math.sqrt(Math.pow(center[0] - who.x, 2) + Math.pow(center[1] - who.y, 2));
-        who.a = value[0] * (Math.PI / 180);
-        if (distance < unit2Px) {
-          who.x = who.x + Math.cos(who.a) * (unit2Px / fps);
-          who.y = who.y + Math.sin(who.a) * (unit2Px / fps);
+        if (who.on >= who.stamps.length) {
+          who.a = value[0] * (Math.PI / 180);
+          who.stamps.push([time, 0, value, who.a, who.x, who.y]);
+        }
+        var timePerc = (time - who.stamps[who.on][0]) / 1000;
+        if (timePerc <= 1) {
+          who.x = center[0] + unit2Px * Math.cos(who.a) * timePerc;
+          who.y = center[1] - unit2Px * Math.sin(who.a) * timePerc;
           who.visual.attr("cx", who.x).attr("cy", who.y);
-        } else if (loading) {
-          who.stamps.push([time, who.a, who.x, who.y]);
+        } else {
           who.on++;
         }
       }
 
-//1	Ending function; Requires robot at wall and direction, robot follows wall until exit is known.
-      function FollowWall(who, value) {
-        var change = ((value[0] == "left") ? (1) : (-1)) / fps;
-        who.a += change;
-        who.x = center[0] + unit2Px * Math.cos(who.a);
-        who.y = center[1] + unit2Px * Math.sin(who.a);
+//	End; Requires nothing; Bot stops where it is.
+      function Wait(who, value) {
+        if (who.on >= who.stamps.length) {
+          who.stamps.push([time, 1, value, who.a, who.x, who.y]);
+        }
         who.visual.attr("cx", who.x).attr("cy", who.y);
       }
 
-//2	Mid function; Requires robot at wall, angle(time) and direction, robot follow walls until angle(time) reached.
-      function FollowWallFor(who, value) {
-        if (Math.abs(who.a - who.stamps[who.on - 1][0]) < value[1] * (Math.PI / 180)) {
-          var change = ((value[0] == "left") ? (1) : (-1)) / fps;
-          who.a += change;
-          who.x = center[0] + unit2Px * Math.cos(who.a);
-          who.y = center[1] + unit2Px * Math.sin(who.a);
-          who.visual.attr("cx", who.x).attr("cy", who.y);
-        } else if (loading) {
-          who.stamps.push([time, who.a, who.x, who.y]);
-          who.on++;
+//	End; Requires direction; Robot follows wall
+      function FollowWall(who, value) {
+        if (who.on >= who.stamps.length) {
+          who.stamps.push([time, 2, value, who.a, who.x, who.y]);
         }
+        var dir = (value[0] == 'left') ? (1) : (-1);
+        who.a = who.stamps[who.on][3] + ((time - who.stamps[who.on][0]) / 1000) * dir;
+        who.x = center[0] + unit2Px * Math.cos(who.a);
+        who.y = center[1] - unit2Px * Math.sin(who.a);
+        who.visual.attr("cx", who.x).attr("cy", who.y);
       }
 
-//3	Mid function; Requires robot not at center, robot returns to center.
-      function GoToCenter(who, value) {
-        var distance = Math.sqrt(Math.pow(center[0] - who.x, 2) + Math.pow(center[1] - who.y, 2));
-        if (distance > .1) {
-          who.x = who.x - Math.cos(who.a) * (unit2Px / fps);
-          who.y = who.y - Math.sin(who.a) * (unit2Px / fps);
-          who.visual.attr("cx", who.x).attr("cy", who.y);
-        } else if (loading) {
-          who.stamps.push([time, who.a, who.x, who.y]);
-          who.on++;
-        }
-      }
-
-//4	Ending Function; Requires nothing, robot is waiting....
-      function Wait(who, value) {
-        console.log("waiting...");
-      }
-
-//5	Start/Mid function; Requires time, robot wait for some amount of time...
+//	Start/Middle; Requires time; Wait for time
       function WaitFor(who, value) {
-        if (who.t < value[0]) {
-          who.t += (1 / fps);
-        } else if (loading) {
-          who.stamps.push([time, who.a, who.x, who.y]);
-          who.t = 0;
+        if (who.on >= who.stamps.length) {
+          who.stamps.push([time, 3, value, who.a, who.x, who.y]);
+        }
+        if (time < (who.stamps[who.on][0] + value[0] * 1000)) {
+          who.visual.attr("cx", who.x).attr("cy", who.y);
+        } else {
           who.on++;
         }
       }
 
-//6	Ending function;
-      function AverageWait(who, value) {
-        var avgX = 0;
-        var avgY = 0;
-        var count = 0;
+//	Middle; Requires direction and angle(time); bot travels along wall for angle(time)
+      function FollowWallFor(who, value) {
+        if (who.on >= who.stamps.length) {
+          who.stamps.push([time, 4, value, who.a, who.x, who.y]);
+        }
+        if (time < (who.stamps[who.on][0] + value[1] * (Math.PI / 180) * 1000)) {
+          var dir = (value[0] == 'left') ? (1) : (-1);
+          who.a = who.stamps[who.on][3] + ((time - who.stamps[who.on][0]) / 1000) * dir;
+          who.x = center[0] + unit2Px * Math.cos(who.a);
+          who.y = center[1] - unit2Px * Math.sin(who.a);
+          who.visual.attr("cx", who.x).attr("cy", who.y);
+        } else {
+          who.on++;
+        }
+      }
+
+//	Middle; Requires not at center; Bot goes to center
+      function GoToCenter(who, value) {
+        if (who.on >= who.stamps.length) {
+          who.stamps.push([time, 5, value, who.a, who.x, who.y]);
+        }
+        var timePerc = (time - who.stamps[who.on][0]) / 1000;
+        console.log(timePerc);
+        if (timePerc <= 1) {
+          who.x = who.stamps[who.on][4] - unit2Px * Math.cos(who.a) * timePerc;
+          who.y = who.stamps[who.on][5] + unit2Px * Math.sin(who.a) * timePerc;
+          who.visual.attr("cx", who.x).attr("cy", who.y);
+        } else {
+          who.on++;
+        }
+      }
+
+//	Start/Middle; Required nothing; Bot stays at point between other bots not in average
+      function WaitAverage(who, value) {
+        if (who.on >= who.stamps.length) {
+          who.stamps.push([time, 6, value, who.a, who.x, who.y]);
+        }
+        var sumPosition = [0, 0];
+        var totalNum = 0;
         for (i = 0; i < tourists.length; i++) {
-          if (i != who.number) {
-            count++;
-            avgX += tourists[i].x;
-            avgY += tourists[i].y;
+          if (tourists[i].on != 6) {
+            totalNum++;
+            sumPosition[0] += tourists[i].x;
+            sumPosition[1] += tourists[i].y;
           }
         }
-        avgX /= count;
-        avgY /= count;
-        var dX = avgX - who.x;
-        var dY = avgY - who.y;
-        var dA = Math.atan2(dY, dX);
-        var distance = Math.sqrt(Math.pow(dX, 2) + Math.pow(dY, 2));
-        if (distance > (unit2Px / fps)) {
-          who.x = who.x + Math.cos(dA) * (unit2Px / fps);
-          who.y = who.y + Math.sin(dA) * (unit2Px / fps);
-        } else {
-          who.x = who.x + Math.cos(dA) * distance;
-          who.y = who.y + Math.sin(dA) * distance;
-        }
+        sumPosition[0] /= totalNum;
+        sumPosition[1] /= totalNum;
+        who.x = sumPosition[0];
+        who.y = sumPosition[1];
         who.visual.attr("cx", who.x).attr("cy", who.y);
       }
 
-//Approximation; Checks if exit is reached.
-      function FoundExit(who) {
-        var distance = Math.sqrt(Math.pow(fieldExit[0] - who.x, 2) + Math.pow(fieldExit[1] - who.y, 2));
-        if (distance <= .2) {
-          who.ikwei = true;
-        }
-      }
 
-//Initializes the viewing area.
+
+
+
+//Initialize the screen
       function Start() {
         unit2Px = (window.innerHeight <= window.innerWidth) ? (window.innerHeight / 5) : (window.innerWidth / 5);
         center = [unit2Px * 2, unit2Px * 2];
         fieldSVG = d3.select("body").append("svg").attr("width", unit2Px * 4).attr("height", unit2Px * 4).style("border", "1px solid black");
         fieldSVG.append("circle").attr("cx", center[0]).attr("cy", center[1]).attr("r", unit2Px).style("fill-opacity", 0.0).style("stroke", "#000000");
         for (i = 0; i < instruBinder.length; i++) {
-          tourists.push(new Tourist(fieldSVG.append("circle").attr("cx", center[0]).attr("cy", center[1]).attr("r", unit2Px / 16).style("fill", "red"), instruBinder[i], center));
+          tourists.push(new Tourist(fieldSVG.append("circle").attr("cx", center[0]).attr("cy", center[1])
+                                            .attr("r", unit2Px / 16).style("fill", RandomColor()), instruBinder[i]));
         }
         fieldExit = [center[0] + unit2Px * Math.cos(fieldExit * (Math.PI / 180)), center[1] + unit2Px * Math.sin(fieldExit * (Math.PI / 180))];
         fieldSVG.append("circle").attr("cx", center[0]).attr("cy", center[1]).attr("r", 1).style("fill", "#000000");
@@ -202,29 +219,28 @@
         projector = setInterval(LoadAnim, 1000 / fps);
       }
 
-//Wraps around AnimFrame, used to precalculate everything so the user can see the data.
-      function LoadAnim() {
-        if (time > timeMax) {
-          timeSlide.attr("visibility", "visible");
-          loading = false;
-        }
-        AnimFrame();
-        timeBox.attr("width", (32 / 8) * unit2Px * (time / timeMax));
+//Create a random color, makes robots distinct.
+      function RandomColor() {
+        var colorRed = Math.floor(Math.random() * 256).toString(16);
+        var colorGreen = Math.floor(Math.random() * 256).toString(16);
+        var colorBlue = Math.floor(Math.random() * 256).toString(16);
+        return(colorRed + colorGreen + colorBlue);
       }
 
-//Updates bots;
-      var AnimFrame = () => {
-        if (time > timeMax) {
+//Load interval
+      function LoadAnim() {
+        if (time >= timeMax) {
+          timeSlide.attr("visibility", "visible");
           clearInterval(projector);
         } else {
-          time += (1000 / fps);
-          timeSlide.attr("x", (31 / 8) * unit2Px * (time / timeMax));
           tourists.forEach((tourist) => {
-                       tourist.Update();
-                   });
+            tourist.LoadUpdate();
+          });
+          time += (1000 / fps);
+          timeSlide.attr("x", (time / timeMax) * (31 / 8) * unit2Px);
+          timeBox.attr("width", (time / timeMax) * 4 * unit2Px);
         }
-      };
-
+      }
 
       //////////----------Initial Function Call----------//////////
       Start();
