--- a/interface.html
+++ b/interface.html
@@ -6,12 +6,7 @@
 </head>
 
 <body>
-    <style>
-    .center {
-        margin: auto;
-        width: 50%;
-        height: 25%;
-    }
+    <style></style>
 
     </style>
     <script>
@@ -22,8 +17,8 @@
         constructor (x, y, type, commandFn, params, prevNode, nextNode){
             this.x = x;
             this.y = y;
-            this.height = (window.innerHeight*1.5)/10;
-            this.width = (window.innerWidth*1.5)/10;
+            this.height = (window.innerHeight*1.2)/10;
+            this.width = (window.innerWidth*1.2)/10;
             this.commandFn = commandFn;
             this.params = [];
             this.type = type;
@@ -36,13 +31,13 @@
             //commandBlock takes itself in draw because when the SVG is selected, it becomes 'this'
             //so we have to sepcify that we want the commandBlock's attributes to change, unfortunately.
             var box = d3.select('.binder').append('svg')
-            .attr('x', this.x)
-            .attr('y', this.y)
-            .attr('width', this.width)
-            .attr('height', this.height)
-            .call(d3.drag().on('start', activateBox)
-                           .on('drag', updateBox)
-                           .on("end", deactivateBox));
+                .attr('x', this.x)
+                .attr('y', this.y)
+                .attr('width', this.width)
+                .attr('height', this.height)
+                .call(d3.drag().on('start', activateBox)
+                    .on('drag', updateBox)
+                    .on("end", deactivateBox));
 
             box.append('rect') //the block itself
                 .attr('x', 0)
@@ -53,6 +48,29 @@
                 .attr('stroke-width', 3)
                 .attr('fill', '#ddd')
                 .attr('class', 'block');
+
+            var t = commandBlock.type;
+
+            if (t == 'goOutAtAngle') {
+                commandBlock.creategoOutAtAngle(commandBlock, box);
+            }
+            else if (t == 'waitFor') {
+                commandBlock.createWaitFor(commandBlock, box);
+            }
+
+        }
+
+        callCommand(commandBlock) {
+            return function () { //closure scope, only calls function when button is clicked
+                commandBlock.commandFn(commandBlock.params);
+            }
+        }
+
+        //TODO create all blocks with specific array parameters.
+        //TODO implement a function to remove a commandBlock from the screen.
+
+        //goOutAtAngle.params = [int angle]
+        creategoOutAtAngle(commandBlock, box) {
 
             var fo = box.append('foreignObject')
                 .attr('x', this.width/3)
@@ -68,6 +86,14 @@
                 .attr('class', 'textbox')
                 .on('mouseDown', deactivateBox); // so the box doesnt move when the textbox arrows are held...
 
+            var label = d3.select(this.parentNode).append('text')
+                .text('Go at angle')
+                .style('font-size', '20px')
+                .style('fill', 'black')
+                .attr('transform', 'translate(20, 100) rotate(0)')
+                .attr('text-anchor', 'left')
+                .attr('class', 'infotext')
+
             box.append('rect') // the button
                 .attr('x', this.width/3)
                 .attr('y', this.height/3)
@@ -76,24 +102,108 @@
                 .attr('stroke', 'black')
                 .attr('fill', '#68ff63')
                 .on('click', function () {
-                    commandBlock.params = +d3.select(this.parentNode).select('.textbox').property('value'); //selects parent svg of the button, then goes back into the children to find the textbox input
+                    if (commandBlock.params.length == 0){
+                        commandBlock.params.push(+d3.select(this.parentNode).select('.textbox').property('value')); //selects parent svg of the button, then goes back into the children to find the textbox input
+                    }
+                    else{
+                        commandBlock.params[0] = +d3.select(this.parentNode).select('.textbox').property('value');
+                    }
                     console.log(commandBlock.params);
                     d3.select(this.parentNode).select('.infotext').remove();
-                    var label = d3.select(this.parentNode).append('text')
+                    label = d3.select(this.parentNode).append('text')
                         .text('Go at angle: ' + commandBlock.params)
-                        .style('font-size', '26px')
+                        .style('font-size', '20px')
                         .style('fill', 'black')
                         .attr("transform", "translate(20, 100) rotate(0)")
                         .attr('text-anchor', 'left')
                         .attr('class', 'infotext');
-                });
+            });
+
         }
 
-        callCommand(commandBlock) {
-            return function () { //closure scope, only calls function when button is clicked
-                commandBlock.commandFn(commandBlock.params);
-            }
+        //goToCenter.params = [], takes 1 time to get there.
+        createGoToCenter(commandBlock, box) {
+
         }
+
+
+        //waitFor.params = [int time]
+        createWaitFor(commandBlock, box) {
+
+            var fo = box.append('foreignObject')
+                .attr('x', this.width/3)
+                .attr('y', 10)
+                .attr('width', 50);
+
+            var textBox = fo.append('xhtml:div').append('div').append('input')
+                .attr('name', 'Wait for: ')
+                .attr('type', 'number')
+                .attr('min', 0)
+                .attr('max', 9999)
+                .attr('value', 0)
+                .attr('class', 'textbox')
+                .on('mouseDown', deactivateBox); // so the box doesnt move when the textbox arrows are held...
+
+            var label = d3.select(this.parentNode).append('text')
+                .text('Wait for: ')
+                .style('font-size', '20px')
+                .style('fill', 'black')
+                .attr('transform', 'translate(20, 100) rotate(0)')
+                .attr('text-anchor', 'left')
+                .attr('class', 'infotext');
+
+            box.append('rect') // the button
+                .attr('x', this.width/3)
+                .attr('y', this.height/3)
+                .attr('width', '30%')
+                .attr('height', '20%')
+                .attr('stroke', 'black')
+                .attr('fill', '#68ff63')
+                .on('click', function () {
+                    if (commandBlock.params.length == 0){
+                        commandBlock.params.push(+d3.select(this.parentNode).select('.textbox').property('value'));
+                    }
+                    else{
+                        commandBlock.params[0] = +d3.select(this.parentNode).select('.textbox').property('value');
+                    }
+                    console.log(commandBlock.params);
+                    d3.select(this.parentNode).select('.infotext').remove();
+                    label = d3.select(this.parentNode).append('text')
+                        .text('Wait for: ' + commandBlock.params)
+                        .style('font-size', '20px')
+                        .style('fill', 'black')
+                        .attr("transform", "translate(20, 100) rotate(0)")
+                        .attr('text-anchor', 'left')
+                        .attr('class', 'infotext');
+            });
+
+        }
+
+        //wait.params = [], wait indefinitely.
+        createWait(commandBlock, box){
+
+        }
+
+        //waitAverage.params = []
+        createWaitAverage(commandBlock, box) {
+
+        }
+
+        //followWallFor.params = [string direction, int angle(time)]
+        createFollowWallFor(commandBlock, box) {
+
+        }
+
+        //followWall.params = [string direction]
+        createFollowWall(commandBlock, box) {
+
+        }
+
+        removeCommandBlock() {
+
+        }
+
+
 
     }
 
@@ -103,6 +213,7 @@
     var winHeight = window.innerHeight;
     var emptyQueue = [];
     var commandQueue = [];
+    var looseCommands = [];
     console.log(winWidth);
     console.log(winHeight);
 
@@ -111,13 +222,20 @@
               .attr('height', winHeight)
               .attr('class', 'binder');
 
+    var commandsList = [['goOutAtAngle', testCommands], ['goToCenter', testCommands],
+                        ['waitFor', testCommands], ['wait', testCommands],
+                        ['waitAverage', testCommands], ['followWallFor', testCommands],
+                        ['followWall', testCommands]]
+
 
     //---Name Functions---//
 
+    //Takes x1, y1, x2, y2, as ints.
     function distance(x1, y1, x2, y2) {
         return Math.sqrt(((x2 - x1)*(x2-x1)) + ((y2-y1)*(y2-y1)));
     }
 
+    //Takes the window SVG as a d3 object, x as int, y as int.
     function createBlank(svg, x, y) {
 
         var blank = svg.append('rect')
@@ -135,9 +253,6 @@
     function activateBox() {
         d3.select(this).attr('stroke', 'gray').attr('fill', '#ccc').attr('class', 'commandBox');
         d3.select(this).classed('active', true);
-
-
-
     }
 
     function updateBox() {
@@ -146,9 +261,6 @@
         var newCommand = false;
 
         d3.select(this).attr('x', mousePosX).attr('y', mousePosY);
-
-        //console.log(emptyQueue);
-
         for (r=0; r<emptyQueue.length; r++) {
             var x1 = +emptyQueue[r][0];
             var y1 = +emptyQueue[r][1];
@@ -158,11 +270,40 @@
             }
         }
 
+        //need to change the internal object's x and y positions as well as the svg.
+        //consider adding method to the class and calling commandBlock.updateBox instead.
+
     }
 
     function deactivateBox() {
         d3.select(this).attr('stroke', 'black').attr('fill', '#ddd');
         d3.select(this).classed('active', false);
+    }
+
+    // Takes type as a string, commandFn as a function, posX, posY as int.
+    function drawCommandList(type, commandFn, posX, posY) {
+        var box = d3.select('.binder').append('svg')
+            .attr('x', posX)
+            .attr('y', posY)
+            .attr('width', '15%')
+            .attr('height', '10%');
+        box.append('rect')
+            .attr('x', 0)
+            .attr('y', 0)
+            .attr('width', '100%')
+            .attr('height', '100%')
+            .style('stroke', 'black')
+            .attr('stroke-width', 3)
+            .attr('fill', '#ddd')
+            //creates a new CommandBlock object on click and sends it to the loose command Queue.
+            .on('click', function() {looseCommands.push(new CommandBlock(d3.event.x, d3.event.y, type, commandFn, [], null, null));});
+        box.append('text')
+            .text(type)
+            .style('font-size', '24px')
+            .style('fill', 'black')
+            .attr("transform", "translate(10, 50) rotate(0)")
+            .attr('text-anchor', 'left')
+            .attr('class', 'infotext');
     }
 
     //---Set up boundaries---//
@@ -174,19 +315,22 @@
         .style('stroke', '#000')
         .attr('stroke-width', 3);
 
-    var goBox = win.append('rect')
-        .attr('x', winWidth * 0.7)
-        .attr('y', winHeight/15)
-        .attr('width', '10%')
-        .attr('height', '10%')
-        .style('stroke', 'black')
-        .attr('stroke-width', 3)
-        .attr('fill', '#ddd')
-        .call(d3.drag().on('start', function() { new CommandBlock(d3.event.x, d3.event.y, null, null, null, null, null); }));
+    // Draw up a list of command boxes to click on.
+    for (i = 0; i < commandsList.length; i++) {
+        var posX = winWidth * 0.7;
+        var posY = winHeight/15 + (i * (winHeight/9));
+        type = commandsList[i][0];
+        commandFn = commandsList[i][1];
+        drawCommandList(type, commandFn, posX, posY);
+    }
 
-    var testCommand = new CommandBlock(100, 100, 'goAtAngle', testCommands, [], null, null);
-    //var test2 = new CommandBlock(100, 300, 'goAtAngle', testCommands, [], null, null);
+
+    var testCommand = new CommandBlock(100, 100, 'goOutAtAngle', testCommands, [], null, null);
+    var test2 = new CommandBlock(100, 300, 'waitFor', testCommands, [], null, null);
+
+    looseCommands = [testCommand, test2];
     console.log(testCommand.params);
+    console.log(test2.params);
 
     function testCommands(parameter) {
         console.log('the command block passed me a parameter');
@@ -195,7 +339,7 @@
 
     var start = win.append('svg')
         .attr('x', winWidth * 0.7)
-        .attr('y', winHeight * 0.7)
+        .attr('y', winHeight/15 + (commandsList.length * (winHeight/9)))
         .attr('width', '10%')
         .attr('height', '10%')
     .append('rect')
@@ -207,22 +351,24 @@
         .attr('fill', '#a3ffa0')
         .on('click', testCommand.callCommand(testCommand));
 
-
-
-        //.on('click', function() {d3.select(this).attr('stroke', '#333').attr('fill', '#fff');});
-
-
-    //var form = d3.select(goBox).append('form');
-    //var label = de.select(goBox).append('label');
-
-    //form.enter().append('input').attr('type', 'text').attr('name', 'Angle');
-
+    var start = win.append('svg')
+        .attr('x', winWidth * 0.82)
+        .attr('y', winHeight/15 + (commandsList.length * (winHeight/9)))
+        .attr('width', '10%')
+        .attr('height', '10%')
+    .append('rect')
+        .attr('x', 0)
+        .attr('y', 0)
+        .attr('width', '100%')
+        .attr('height', '100%')
+        .attr('stroke', 'green')
+        .attr('fill', '#ff6e51')
+        .on('click', function() {looseCommands = [];});
 
     </script>
 
     <g>
-        <button name="test button" type="submit" value="submit-true"></button>
-
+        <button name="test button" type="submit" value="submit-true">If u see this at the top left the website crashed.</button>
     </g>
 </body>
 
